# SuperSonic

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/gemma4/: Cargo.toml
crates/gpu-hal/: Cargo.toml  build.rs
crates/kernel-ffi/: Cargo.toml  build.rs
crates/model-store/: Cargo.toml
crates/model-store/src/: baker.rs  fetch.rs  lib.rs  manifest.rs  store.rs  transforms.rs
crates/phi4/: Cargo.toml
crates/qwen35/: Cargo.toml
crates/qwen35_dflash/: Cargo.toml
crates/qwen35_dflash/src/: config.rs  forward.rs  lib.rs  loader.rs  rotary.rs  state.rs  weights.rs
crates/qwen35_dflash/tests/: forward_smoke.rs
crates/qwen36_moe/: Cargo.toml
crates/runner/: Cargo.toml
crates/runner/bughunt/: qwen35_metal_manifest.json
crates/runner/src/: bughunt.rs  certified_kv.rs  decode_engine.rs  gemma4_engine.rs  gemma4_int4_engine.rs  lib.rs  llama31_engine.rs  main.rs  oracle.rs  phi4_engine.rs  prefill_engine.rs  qwen35_dflash_engine.rs  qwen36_moe_decode.rs  qwen36_moe_engine.rs  qwen36_moe_mtp.rs  qwen36_moe_persistent_decode.rs  qwen36_moe_speculative.rs  qwen36_moe_state.rs  registry.rs  validate.rs
crates/runner/tests/: gemma4_oracle_schema.rs  metal_qwen_smoke.rs  qwen35_bughunt_smoke.rs  qwen36_moe_linear_state.rs  qwen36_moe_mtp_parity.rs  qwen36_moe_multilayer_parity.rs
crates/runner/tests/fixtures/: gemma4_oracle_sample.json  gemma4_oracle_state_sample.json
crates/server/: Cargo.toml
crates/server/src/: chat_template.rs  errors.rs  generate.rs  lib.rs  main.rs  sampling.rs  schemas.rs  session.rs  state.rs
crates/server/src/routes/: chat.rs  completions.rs  mod.rs  models.rs
crates/server/tests/: chat_integration.rs
docs/: bake-distribution.md  certified-kv-audit-map.md  dflash.md  gfx1150-l2-bypass.md  metal-qwen35-v1-bringup.md  performance.md  phi4-cuda-parity.md  qwen35-4b-sm86-optimization.md  qwen35-sm86-optimization.md  qwen36-moe-bake-quality-audit.md  qwen36-moe-megakernel-plan.md  qwen36-moe-plan.md  qwen36-moe-pr4c-plan.md  qwen36-verification-suite.md
kernels/: certified_kv_bridge_cuda.cu  dflash_draft.hip  dflash_draft_bridge.cpp  full_attention.hip  full_attention_4b.hip  full_attention_4b_cuda.cuh  full_attention_bridge.cpp  full_attention_bridge_4b.cpp  full_attention_bridge_4b_cuda.cu  full_attention_bridge_cuda.cu  full_attention_cuda.cuh  gemma4.hip  gemma4_bridge.cpp  gemma4_bridge_cuda.cu  gemma4_cuda.cuh  phi4.hip  phi4_bridge.cpp  phi4_bridge_cuda.cu  phi4_cuda.cuh  prefill_helpers.hip  prefill_helpers_bridge.cpp  prefill_helpers_bridge_cuda.cu  prefill_helpers_cuda.cuh  qwen36_moe.hip  qwen36_moe_bridge.cpp
kernels/qwen36_moe_persistent/: ffn_phase.cuh  full_attn_phase.cuh  helpers.cuh  linear_attn_phase.cuh  persistent_decode.hip
oracle/: _bake_loader.py  arxiv_v1_smoke.py  bake_all.sh  bake_fp8.py  bake_fp8_gemma4.py  bake_fp8_phi4.py  bake_int4.py  bake_int4_gemma4.py  bake_int4_phi4.py  bake_int8_llama31.py  bake_q4km.py  certified_kv_llama31.py  certified_kv_paper_bench.py  gemma4_int4_python_gen.py  gemma4_oracle.py  int4_corpus_compare.py  int4_first_token_diag.py  pg19_smoke.py  phi4_int4_layer_drift.py  phi4_oracle.py  q4km_bake_oracle.py  q4km_collect_hessians.py  q4km_stream_gptq_bake.py  qwen35_oracle.py  qwen36_moe_bake_cossim_survey.py  qwen36_moe_ffn_oracle.py  qwen36_moe_linear_oracle.py  qwen36_moe_mtp_oracle.py  qwen36_moe_multilayer_oracle.py  qwen36_moe_oracle.py  qwen36_moe_vllm_mtp_reference.py  qwen36_verify_suite.py  run_oracle.py  summarize_pg19_results.py  test_bake_int4_streaming.py  test_bake_q4km.py  test_bake_qwen36_moe.py  upload_bake.py
tests/: test_arxiv_v1_smoke.py  test_certified_kv_llama31_oracle.py  test_pg19_smoke.py  test_qwen36_verify_suite.py
tests/corpus/: generate_golden.py  generate_golden_native.py  golden_0.8b.json  (+12 more)
(+92 files in other folders)
