[package]
name = "model-store"
version = "0.1.0"
edition = "2021"

[dependencies]
gpu-hal = { path = "../gpu-hal" }
safetensors = "0.5"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
half = "2.4"
thiserror = "2"
ureq = { version = "2", default-features = false, features = ["tls"] }
zstd = "0.13"
tar = "0.4"
sha2 = "0.10"
fs2 = "0.4"
