[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "supersonic"
path = "src/main.rs"

[[bin]]
name = "int4_test"
path = "src/bin/int4_test.rs"

[[bin]]
name = "int4_real_test"
path = "src/bin/int4_real_test.rs"

[dependencies]
gpu-hal = { path = "../gpu-hal" }
kernel-ffi = { path = "../kernel-ffi" }
model-store = { path = "../model-store" }
qwen35 = { path = "../qwen35" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22"
base64 = "0.22"
half = "2.4"
