[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "supersonic"
path = "src/main.rs"

[[bin]]
name = "int4_test"
path = "src/bin/int4_test.rs"

[[bin]]
name = "int4_real_test"
path = "src/bin/int4_real_test.rs"

[[bin]]
name = "gemma4_primitive_test"
path = "src/bin/gemma4_primitive_test.rs"

[[bin]]
name = "gemma4_layer0_validate"
path = "src/bin/gemma4_layer0_validate.rs"

[[bin]]
name = "gemma4_decode_validate"
path = "src/bin/gemma4_decode_validate.rs"

[[bin]]
name = "gemma4_e2e_validate"
path = "src/bin/gemma4_e2e_validate.rs"

[[bin]]
name = "gemma4_fused_decode_validate"
path = "src/bin/gemma4_fused_decode_validate.rs"

[[bin]]
name = "gemma4_mega_decode_validate"
path = "src/bin/gemma4_mega_decode_validate.rs"

[dependencies]
gpu-hal = { path = "../gpu-hal" }
kernel-ffi = { path = "../kernel-ffi" }
model-store = { path = "../model-store" }
qwen35 = { path = "../qwen35" }
gemma4 = { path = "../gemma4" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22"
base64 = "0.22"
half = "2.4"
safetensors = "0.5"
memmap2 = "0.9"
